[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghosted-dm"
version = "0.1.0"
description = "Bulk-unsend your Instagram DMs. Free and open source."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "ghosted contributors" }]
keywords = ["instagram", "dm", "unsend", "privacy", "delete", "messages"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Communications",
    "Topic :: Utilities",
]
dependencies = [
    "instagrapi>=2.10.0",
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/ratantejmadan/ghosted"
Repository = "https://github.com/ratantejmadan/ghosted"
Issues = "https://github.com/ratantejmadan/ghosted/issues"

[project.scripts]
ghosted = "ghosted.purge_dms:main"
ghosted-login = "ghosted.login_browser:capture_session"
ghosted-unsend-one = "ghosted.unsend_one:main"
ghosted-engine = "ghosted.engine:main"

[tool.setuptools]
packages = ["ghosted"]